cabal-version:       3.0
-- Newer versions complain
name:                maths
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/danwdart/dansstuff#readme
license:             AGPL-3.0-only
-- license-file:        LICENSE
author:              Dan Dart
maintainer:          cabal@dandart.co.uk
copyright:           2019 Dan Dart
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared-properties
  hs-source-dirs:      src
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax
  build-depends:       base >= 4.16 && < 5
  ghc-options:         -Wall -Werror -haddock -threaded -rtsopts -with-rtsopts=-N
                       -Weverything
                       -Wno-unsafe -Wno-safe
                       -Wno-missing-import-lists
                       -Wno-missing-export-lists
                       -Wno-implicit-prelude
                       -Wno-missing-safe-haskell-mode
                       -Wno-missing-kind-signatures
                       -Wno-prepositive-qualified-module
                       -Wno-missing-local-signatures
  ghcjs-options:       -dedupe

library
  hs-source-dirs:      lib
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax
  build-depends:       base >= 4.16 && < 5, digits, primes
  ghc-options:         -Wall -Werror -haddock
                       -Weverything
                       -Wno-unsafe -Wno-safe
                       -Wno-missing-import-lists
                       -Wno-missing-export-lists
                       -Wno-implicit-prelude
                       -Wno-missing-safe-haskell-mode
                       -Wno-missing-kind-signatures
                       -Wno-prepositive-qualified-module
                       -Wno-missing-local-signatures
  ghcjs-options:       -dedupe
  exposed-modules:     Data.List.Iterate
                     , Data.List.Safer
                     , Data.List.Nub
                     , Data.List.Repeat
                     , Factor
                     , Sequence.Fibonacci
                     , Sequence.HalveOrReverse
                     , Sequence.LookAndSay
                     , Sequence.Lucas
                     , Sequence.Period
                     , Sequence.SumOf
                     , Collatz
                     , Frobenius
                     , NumList
                     , Period
                     , Semiprimes
                     , Ulam

executable oeisA001222
  import: shared-properties
  main-is:             oeis/A001222.hs
  build-depends:       base >= 4.16 && < 5, primes

executable oeisA001223
  import: shared-properties
  main-is:             oeis/A001223.hs
  build-depends:       base >= 4.16 && < 5, containers, primes

executable oeisA001414
  import: shared-properties
  main-is:             oeis/A001414.hs
  build-depends:       base >= 4.16 && < 5, primes

executable oeisA003001
  import: shared-properties
  main-is:             oeis/A003001.hs
  build-depends:       base >= 4.16 && < 5, maths

executable oeisA003001-otherbases
  import: shared-properties
  main-is:             oeis/A003001-otherbases.hs
  build-depends:       base >= 4.16 && < 5, maths, digits

executable oeisA024702
  import: shared-properties
  main-is:             oeis/A024702.hs
  build-depends:       base >= 4.16 && < 5, primes

executable oeisA025281
  import: shared-properties
  main-is:             oeis/A025281.hs
  build-depends:       base >= 4.16 && < 5, primes

executable oeisA032742
  import: shared-properties
  main-is:             oeis/A032742.hs
  build-depends:       base >= 4.16 && < 5, maths, primes

executable oeisA052126
  import: shared-properties
  main-is:             oeis/A052126.hs
  build-depends:       base >= 4.16 && < 5, maths, primes

executable oeisA112544
  import: shared-properties
  main-is:             oeis/A112544.hs
  build-depends:       base >= 4.16 && < 5, maths

executable oeisA133058
  import: shared-properties
  main-is:             oeis/A133058.hs
  build-depends:       base >= 4.16 && < 5

executable oeisA171607
  import: shared-properties
  main-is:             oeis/A171607.hs
  build-depends:       base >= 4.16 && < 5, containers

executable oeisA181391
  import: shared-properties
  main-is:             oeis/A181391.hs

executable oeisA275124
  import: shared-properties
  main-is:             oeis/A275124.hs
  build-depends:       base >= 4.16 && < 5, maths

executable oeisA275167
  import: shared-properties
  main-is:             oeis/A275167.hs
  build-depends:       base >= 4.16 && < 5, maths

executable oeisA308267
  import: shared-properties
  main-is:             oeis/A308267.hs
  build-depends:       base >= 4.16 && < 5

executable oeisA309979
  import: shared-properties
  main-is:             oeis/A309979.hs

executable oeisA332049
  import: shared-properties
  main-is:             oeis/A332049.hs
  build-depends:       base >= 4.16 && < 5, maths

executable oeisA349049
  import: shared-properties
  main-is:             oeis/A349049.hs
  build-depends:       base >= 4.16 && < 5, primes

executable oeisA355467
  import: shared-properties
  main-is:             oeis/A355467.hs
  build-depends:       base >= 4.16 && < 5, primes

executable ai
  import: shared-properties
  main-is:             ai.hs

executable algebra
  import: shared-properties
  main-is:             algebra.hs
  build-depends:       base >= 4.16 && < 5

executable arbitrage
  import: shared-properties
  main-is:             arbitrage.hs

executable babylonsqrt
  import: shared-properties
  main-is:             babylonsqrt.hs

executable base
  import: shared-properties
  main-is:             base.hs
  build-depends:       base >= 4.16 && < 5

executable base-own
  import: shared-properties
  main-is:             base-own.hs

executable cardord
  import: shared-properties
  main-is:             cardord.hs

executable cells-aa
  import: shared-properties
  main-is:             cells-aa.hs
  build-depends:       base >= 4.16 && < 5, digits
-- gloss

executable collatz
  import: shared-properties
  main-is:             collatz.hs
  build-depends:       base >= 4.16 && < 5, maths

executable common-ancestors
  import: shared-properties
  main-is:             common-ancestors.hs
  build-depends:       base >= 4.16 && < 5
  -- , containers, MonadRandom

executable diffy
  import: shared-properties
  main-is:             diffy.hs

executable divoverflow
  import: shared-properties
  main-is:             divoverflow.hs

executable exact-real
  import: shared-properties
  main-is:             exact-real.hs
  build-depends:       base >= 4.16 && < 5, maths, numbers, cf

executable factors
  import: shared-properties
  main-is:             factors.hs
  build-depends:       base >= 4.16 && < 5, maths

executable faro
  import: shared-properties
  main-is:             faro.hs
  build-depends:       base >= 4.16 && < 5

executable friendly
  import: shared-properties
  main-is:             friendly.hs
  build-depends:       base >= 4.16 && < 5, primes

executable frobenius
  import: shared-properties
  main-is:             frobenius.hs
  build-depends:       base >= 4.16 && < 5, errors, extra, maths

-- https://github.com/dylex/invertible/issues/5
-- executable gamma
--   import: shared-properties
--   main-is:             gamma.hs
--   build-depends:       base >= 4.16 && < 5, invertible

executable graft
  import: shared-properties
  main-is:             graft.hs

executable graphs
  import: shared-properties
  main-is:             graphs.hs
  build-depends:       base >= 4.16 && < 5

executable happy
  import: shared-properties
  main-is:             happy.hs
  build-depends:       base >= 4.16 && < 5, digits, maths

executable harmonic-limit
  import: shared-properties
  main-is:             harmonic-limit.hs
  build-depends:       base >= 4.16 && < 5, extra

executable highlycompositebase
  import: shared-properties
  main-is:             highlycompositebase.hs
  build-depends:       base >= 4.16 && < 5, maths, digits

-- executable jig
--   import: shared-properties
--   main-is:             jig.hs
--   build-depends:       base >= 4.16 && < 5

executable kaprekar
  import: shared-properties
  main-is:             kaprekar.hs

-- Disabled because of https://github.com/alx741/graphite/issues/7
-- executable localgraph
--   import: shared-properties
--   main-is:             localgraph.hs
--   build-depends:       base >= 4.16 && < 5, fgl, graphite, graphviz, hashable, text

executable lucas
  import: shared-properties
  main-is:             lucas.hs

executable mirror
  import: shared-properties
  build-depends:       base >= 4.16 && < 5, digits
  main-is:             mirror.hs

executable mod
  import: shared-properties
  main-is:             mod.hs

executable napier-locar
  import: shared-properties
  main-is:             napier-locar.hs
  build-depends:       base >= 4.16 && < 5, digits

executable numbertypes
  import: shared-properties
  main-is:             numbertypes.hs

executable oeis
  import: shared-properties
  main-is:             oeis.hs
  build-depends:       base >= 4.16 && < 5
                      , aeson
                      , GenericPretty
                      , req

executable onetwenty
  import: shared-properties
  main-is:             120.hs

executable origami
  import: shared-properties
  main-is:             origami.hs
  build-depends:       base >= 4.16 && < 5, cyclotomic

executable pers-helpers
  import: shared-properties
  main-is:             pers-helpers.hs

executable pichang
  import: shared-properties
  main-is:             pichang.hs

executable pi-jg
  import: shared-properties
  main-is:             pi/jg.hs

executable pi-factory
  import: shared-properties
  main-is:             pi/factory.hs
  build-depends:       base >= 4.16 && < 5, factory

executable pills
  import: shared-properties
  main-is:             pills.hs

executable plotter
  import: shared-properties
  main-is:             plotter.hs
  build-depends:       base >= 4.16 && < 5, JuicyPixels, primes

executable polynomials
  import: shared-properties
  main-is:             polynomials.hs

executable prodtosingle
  import: shared-properties
  main-is:             prodtosingle.hs

executable pyth
  import: shared-properties
  main-is:             pyth.hs

executable rootrationalapprox
  import: shared-properties
  main-is:             rootrationalapprox.hs

executable sandpiles
  import: shared-properties
  main-is:             sandpiles.hs
  build-depends:       base >= 4.16 && < 5, comonad

executable selflocation
  import: shared-properties
  main-is:             selflocation.hs
  build-depends:       base >= 4.16 && < 5, numbers

executable surds
  import: shared-properties
  main-is:             surds.hs

executable units
  import: shared-properties
  main-is:             units.hs

executable words
  import: shared-properties
  main-is:             words.hs
  build-depends:       base >= 4.16 && < 5, containers


executable ulam
  import: shared-properties
  main-is:             ulam.hs
  build-depends:       base >= 4.16 && < 5, maths

-- Primes

executable decomp
  import: shared-properties
  main-is:             primefun/decomp.hs
  build-depends:       base >= 4.16 && < 5
  -- fcv, primes

executable harmonic-prime-denoms
  import: shared-properties
  main-is:             primefun/harmonic-prime-denoms.hs
  build-depends:       base >= 4.16 && < 5, primes

executable primemod
  import: shared-properties
  main-is:             primefun/primemod.hs

executable primeraw
  import: shared-properties
  main-is:             primefun/primeraw.hs

executable primey
  import: shared-properties
  main-is:             primefun/primey.hs
  build-depends:       base >= 4.16 && < 5, primes

executable raw
  import: shared-properties
  main-is:             primefun/raw.hs

executable semiprime
  import: shared-properties
  main-is:             primefun/semiprime.hs
  build-depends:       base >= 4.16 && < 5, maths, tabular

test-suite maths-test
  import: shared-properties
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:
    UlamSpec
  -- build-tool-depends:
  --  hspec-discover:hspec-discover
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax
  build-depends:
      base >= 4.16 && < 5
    , maths
    , hspec
    -- , hspec-core
    -- , hspec-expectations
    -- , QuickCheck