cabal-version:      3.12

-- Newer versions complain
name:               maths
version:            0.2.0.0

-- synopsis:
-- description:
homepage:           https://github.com/danwdart/projects#readme
license:            AGPL-3.0-only

-- license-file:        LICENSE
author:             Dan Dart
maintainer:         cabal@dandart.co.uk
copyright:          2019 Dan Dart
category:           Web
build-type:         Simple
extra-source-files: README.md

flag musl
  description: Set if we are building with musl.
  default:     False

common shared-properties
  hs-source-dirs:     src

  if arch(javascript)
    js-sources: jsbits/emcc-config.js

  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:      base >=4.21.0.0 && <4.23.0.0

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-unrecognised-warning-flags

  ghcjs-options:      -dedupe

library
  hs-source-dirs:     lib

  if arch(javascript)
    js-sources: jsbits/emcc-config.js

  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-unrecognised-warning-flags

  ghcjs-options:      -dedupe

  if ((arch(javascript) || arch(wasm32)) || flag(musl))
    build-depends:
      , base    >=4.21.0.0 && <4.23.0.0
      , digits  ^>=0.3.1
      , primes  ^>=0.2.1.0

    exposed-modules:
      Collatz
      Data.List.Iterate
      Data.List.Nub
      Data.List.Repeat
      Data.List.Safer
      Factor
      Frobenius
      Numeric.DiffFactor
      Numeric.Napier
      Numeric.Tree
      NumList
      Period
      Semiprimes
      Sequence.Fibonacci
      Sequence.HalveOrReverse
      Sequence.LookAndSay
      Sequence.Lucas
      Sequence.Period
      Sequence.SumOf
      Ulam

  if ((!arch(javascript) && !arch(wasm32)) && !flag(musl))
    build-depends:
      , base         >=4.21.0.0 && <4.23.0.0
      , Chart        ^>=1.9.5
      , Chart-cairo  ^>=1.9.4.1
      , digits       ^>=0.3.1
      , primes       ^>=0.2.1.0

    exposed-modules:
      Chart
      Collatz
      Data.List.Iterate
      Data.List.Nub
      Data.List.Repeat
      Data.List.Safer
      Factor
      Frobenius
      Numeric.DiffFactor
      Numeric.Napier
      Numeric.Tree
      NumList
      Period
      Semiprimes
      Sequence.Fibonacci
      Sequence.HalveOrReverse
      Sequence.LookAndSay
      Sequence.Lucas
      Sequence.Period
      Sequence.SumOf
      Ulam

executable oeisA001222
  import:        shared-properties
  main-is:       oeis/A001222.hs
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , primes  ^>=0.2.1.0

executable oeisA001223
  import:        shared-properties
  main-is:       oeis/A001223.hs
  build-depends:
    , base        >=4.21.0.0 && <4.23.0.0
    , containers  ^>=0.8
    , primes      ^>=0.2.1.0

executable oeisA001414
  import:        shared-properties
  main-is:       oeis/A001414.hs
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , primes  ^>=0.2.1.0

executable oeisA003001
  import:        shared-properties
  main-is:       oeis/A003001.hs
  build-depends:
    , base   >=4.21.0.0 && <4.23.0.0
    , maths  ^>=0.2.0.0

executable oeisA003001-otherbases
  import:        shared-properties
  main-is:       oeis/A003001-otherbases.hs
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , digits  ^>=0.3.1
    , maths   ^>=0.2.0.0

executable oeisA005276
  import:        shared-properties
  main-is:       oeis/A005276.hs
  build-depends:
    , base   >=4.21.0.0 && <4.23.0.0
    , maths  ^>=0.2.0.0

executable oeisA024702
  import:        shared-properties
  main-is:       oeis/A024702.hs
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , primes  ^>=0.2.1.0

executable oeisA025281
  import:        shared-properties
  main-is:       oeis/A025281.hs
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , primes  ^>=0.2.1.0

executable oeisA032742
  import:        shared-properties
  main-is:       oeis/A032742.hs
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , primes  ^>=0.2.1.0

executable oeisA052126
  import:        shared-properties
  main-is:       oeis/A052126.hs
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , maths   ^>=0.2.0.0
    , primes  ^>=0.2.1.0

executable oeisA112544
  import:        shared-properties
  main-is:       oeis/A112544.hs
  build-depends:
    , base   >=4.21.0.0 && <4.23.0.0
    , maths  ^>=0.2.0.0

executable oeisA133058
  import:        shared-properties
  main-is:       oeis/A133058.hs
  build-depends: base >=4.21.0.0 && <4.23.0.0

executable oeisA171607
  import:        shared-properties
  main-is:       oeis/A171607.hs
  build-depends:
    , base        >=4.21.0.0 && <4.23.0.0
    , containers  ^>=0.8

executable oeisA177715
  import:        shared-properties
  main-is:       oeis/A177715.hs
  build-depends:
    , base     >=4.21.0.0 && <4.23.0.0
    , numbers  ^>=3000.2.0.2
    , text     ^>=2.1.2

-- , cf ^>=0.4.2
executable oeisA181391
  import:  shared-properties
  main-is: oeis/A181391.hs

executable oeisA275124
  import:        shared-properties
  main-is:       oeis/A275124.hs
  build-depends:
    , base   >=4.21.0.0 && <4.23.0.0
    , maths  ^>=0.2.0.0

executable oeisA275167
  import:        shared-properties
  main-is:       oeis/A275167.hs
  build-depends:
    , base   >=4.21.0.0 && <4.23.0.0
    , maths  ^>=0.2.0.0

executable oeisA308267
  import:        shared-properties
  main-is:       oeis/A308267.hs
  build-depends: base >=4.21.0.0 && <4.23.0.0

executable oeisA309979
  import:  shared-properties
  main-is: oeis/A309979.hs

executable oeisA332049
  import:        shared-properties
  main-is:       oeis/A332049.hs
  build-depends:
    , base   >=4.21.0.0 && <4.23.0.0
    , maths  ^>=0.2.0.0

executable oeisA337840
  import:        shared-properties
  main-is:       oeis/A337840.hs
  build-depends:
    , base     >=4.21.0.0 && <4.23.0.0
    , numbers  ^>=3000.2.0.2
    , text     ^>=2.1.2

-- , cf ^>=0.4.2
executable oeisA349049
  import:        shared-properties
  main-is:       oeis/A349049.hs
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , primes  ^>=0.2.1.0

executable oeisA355467
  import:        shared-properties
  main-is:       oeis/A355467.hs
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , primes  ^>=0.2.1.0

executable ai
  import:        shared-properties
  main-is:       ai.hs
  build-depends: base >=4.21.0.0 && <4.23.0.0

-- , lens                 ^>=5.3.3
-- , MonadRandom ^>=0.6.1

executable adic
  import:        shared-properties
  main-is:       adic.hs
  build-depends: base >=4.21.0.0 && <4.23.0.0

executable algebra
  import:        shared-properties
  main-is:       algebra.hs
  build-depends: base >=4.21.0.0 && <4.23.0.0

executable arbitrage
  import:  shared-properties
  main-is: arbitrage.hs

executable babylonsqrt
  import:  shared-properties
  main-is: babylonsqrt.hs

executable base
  import:  shared-properties
  main-is: base.hs

executable base-own
  import:  shared-properties
  main-is: base-own.hs

executable braid
  import:        shared-properties

  if ((arch(javascript) || arch(wasm32)) || flag(musl))
    buildable: False

  build-depends:
    , base   >=4.21.0.0 && <4.23.0.0
    , maths  ^>=0.2.0.0

  main-is:       braid.hs

executable cardord
  import:  shared-properties
  main-is: cardord.hs

executable cells-aa
  import:        shared-properties
  main-is:       cells-aa.hs
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , digits  ^>=0.3.1

-- gloss

-- executable chaos
--   import:        shared-properties
--   main-is:       chaos.hs
--   build-depends: base >=4.21.0.0 && <4.23.0.0

executable chart
  import:        shared-properties

  if ((arch(javascript) || arch(wasm32)) || flag(musl))
    buildable: False

  main-is:       chart.hs
  build-depends:
    , base         >=4.21.0.0 && <4.23.0.0
    , directory    ^>=1.3.9.0
    , JuicyPixels  ^>=3.3.9
    , maths        ^>=0.2.0.0
    , mtl          ^>=2.3.1

executable collatz
  import:        shared-properties
  main-is:       collatz.hs
  build-depends:
    , base   >=4.21.0.0 && <4.23.0.0
    , maths  ^>=0.2.0.0

executable common-ancestors
  import:  shared-properties
  main-is: common-ancestors.hs

-- , containers, MonadRandom ^>=0.6.1

executable complex
  import:  shared-properties
  main-is: complex.hs

executable compression
  import:  shared-properties
  main-is: compression.hs

-- eh? it's gone?
-- executable cyclic
--   import:  shared-properties
--   main-is: cyclic.hs

executable diffnums
  import:  shared-properties
  main-is: diffnums.hs

-- , containers           ^>=0.8

executable diffy
  import:  shared-properties
  main-is: diffy.hs

executable divoverflow
  import:  shared-properties
  main-is: divoverflow.hs

executable exact-real
  import:        shared-properties
  main-is:       exact-real.hs
  build-depends:
    , base     >=4.21.0.0 && <4.23.0.0
    , cf       ^>=0.4.2
    , maths    ^>=0.2.0.0
    , numbers  ^>=3000.2.0.2

executable factors
  import:        shared-properties
  main-is:       factors.hs
  build-depends:
    , base   >=4.21.0.0 && <4.23.0.0
    , maths  ^>=0.2.0.0

executable faro
  import:  shared-properties
  main-is: faro.hs

-- ???
-- executable fixies
--   import:        shared-properties
--   main-is:       fixies.hs
--   build-depends: base >=4.21.0.0 && <4.23.0.0

executable friendly
  import:        shared-properties
  main-is:       friendly.hs
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , primes  ^>=0.2.1.0

executable frobenius
  import:        shared-properties
  main-is:       frobenius.hs
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , errors  ^>=2.3.0
    , extra   ^>=1.8
    , maths   ^>=0.2.0.0

executable funsum
  import:        shared-properties
  main-is:       funsum.hs
  build-depends:
    , base      >=4.21.0.0 && <4.23.0.0
    , graphite  ^>=0.10.0.1

executable gamma
  import:        shared-properties

  -- th-orphans dies in wasm
  if arch(wasm32)
    buildable: False

  main-is:       gamma.hs
  build-depends:
    , base        >=4.21.0.0 && <4.23.0.0
    , invertible  ^>=0.2.0.8

executable graft
  import:  shared-properties
  main-is: graft.hs

executable graphs
  import:  shared-properties
  main-is: graphs.hs

executable gtsp
  import:  shared-properties
  main-is: gtsp.hs

executable happy
  import:        shared-properties
  main-is:       happy.hs
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , digits  ^>=0.3.1
    , maths   ^>=0.2.0.0

-- , graphviz  ^>=2999.20.2
executable happygraph
  import:        shared-properties
  main-is:       happygraph.hs
  build-depends:
    , base      >=4.21.0.0 && <4.23.0.0
    , digits    ^>=0.3.1
    , graphite  ^>=0.10.0.1

executable harmonic-limit
  import:        shared-properties
  main-is:       harmonic-limit.hs
  build-depends:
    , base   >=4.21.0.0 && <4.23.0.0
    , extra  ^>=1.8

executable harshad
  import:        shared-properties
  main-is:       harshad.hs
  build-depends:
    , base   >=4.21.0.0 && <4.23.0.0
    , digits  ^>=0.3.1

executable highlycompositebase
  import:        shared-properties
  main-is:       highlycompositebase.hs
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , digits  ^>=0.3.1
    , maths   ^>=0.2.0.0

-- ???
-- executable inbase
--   import:        shared-properties
--   main-is:       inbase.hs
--   build-depends:
--     , base     >=4.21.0.0 && <4.23.0.0
--     , numbers ^>=3000.2.0.2
--     , text     ^>=2.1.2

-- , cf ^>=0.4.2
executable ints
  import:        shared-properties
  main-is:       ints.hs
  build-depends:
    , base        >=4.21.0.0 && <4.23.0.0
    , containers  ^>=0.8

-- executable jig
--   import: shared-properties
--   main-is:             jig.hs
--   build-depends:       base >=4.21.0.0 && <4.23.0.0

executable kaprekar
  import:  shared-properties
  main-is: kaprekar.hs

executable keyboardlength
  import:        shared-properties
  main-is:       keyboardlength.hs
  build-depends:
    , base        >=4.21.0.0 && <4.23.0.0
    , bytestring  ^>=0.12.2.0
    , text        ^>=2.1.2

-- Disabled because of https://github.com/alx741/graphite/issues/7
-- executable localgraph
--   import: shared-properties
--   main-is:             localgraph.hs
--   build-depends:       base >=4.21.0.0 && <4.23.0.0, async, fgl, graphite, graphviz, hashable, text        ^>=2.1.2

executable lucas
  import:  shared-properties
  main-is: lucas.hs

executable matrices
  import:  shared-properties
  main-is: matrices.hs

executable mirror
  import:        shared-properties
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , digits  ^>=0.3.1

  main-is:       mirror.hs

executable mod
  import:  shared-properties
  main-is: mod.hs

executable modtotient
  import:  shared-properties
  main-is: modtotient.hs

executable napier-locar
  import:        shared-properties
  main-is:       napier-locar.hs
  build-depends:
    , base   >=4.21.0.0 && <4.23.0.0
    , maths  ^>=0.2.0.0

executable nonary
  import:  shared-properties
  main-is: nonary.hs

executable numbertypes
  import:  shared-properties
  main-is: numbertypes.hs

executable oeis
  import:        shared-properties

  if ((arch(javascript) || arch(wasm32)) || flag(musl))
    buildable: False

  main-is:       oeis.hs
  build-depends:
    , aeson          ^>=2.2.3.0
    , base           >=4.21.0.0 && <4.23.0.0
    , GenericPretty  ^>=1.2.2
    , req            ^>=3.13.4

executable onetwenty
  import:  shared-properties
  main-is: 120.hs

executable origami
  import:        shared-properties
  main-is:       origami.hs
  build-depends:
    , base        >=4.21.0.0 && <4.23.0.0
    , cyclotomic  ^>=1.1.2

executable pers-helpers
  import:  shared-properties
  main-is: pers-helpers.hs

executable pichang
  import:  shared-properties
  main-is: pichang.hs

executable pi-jg
  import:  shared-properties
  main-is: pi/jg.hs

executable pi-factory
  import:        shared-properties
  main-is:       pi/factory.hs
  build-depends:
    , base     >=4.21.0.0 && <4.23.0.0
    , factory  ^>=0.3.2.3

executable pills
  import:  shared-properties
  main-is: pills.hs

executable plotter
  import:        shared-properties

  if ((arch(javascript) || arch(wasm32)) || flag(musl))
    buildable: False

  main-is:       plotter.hs
  build-depends:
    , base         >=4.21.0.0 && <4.23.0.0
    , JuicyPixels  ^>=3.3.9
    , primes       ^>=0.2.1.0

executable polynomials
  import:  shared-properties
  main-is: polynomials.hs

-- executable powmodidempotent
--   import:  shared-properties
--   main-is: powmodidempotent.hs

executable prodtosingle
  import:  shared-properties
  main-is: prodtosingle.hs

executable pyth
  import:  shared-properties
  main-is: pyth.hs

-- executable rootmod
--   import:        shared-properties
--   main-is:       rootmod.hs
--   build-depends:
--     , base      >=4.21.0.0 && <4.23.0.0
--     , graphviz  ^>=2999.20.2

-- , numbers ^>=3000.2.0.2

executable rootrationalapprox
  import:  shared-properties
  main-is: rootrationalapprox.hs

executable sandpiles
  import:        shared-properties
  main-is:       sandpiles.hs
  build-depends:
    , base     >=4.21.0.0 && <4.23.0.0
    , comonad  ^>=5.0.9

executable selflocation
  import:        shared-properties
  main-is:       selflocation.hs
  build-depends:
    , base     >=4.21.0.0 && <4.23.0.0
    , numbers  ^>=3000.2.0.2

executable surds
  import:  shared-properties
  main-is: surds.hs

executable units
  import:  shared-properties
  main-is: units.hs

executable weirdpascal
  import:  shared-properties
  main-is: weirdpascal.hs

executable words
  import:        shared-properties
  main-is:       words.hs
  build-depends:
    , base        >=4.21.0.0 && <4.23.0.0
    , containers  ^>=0.8

executable ulam
  import:        shared-properties
  main-is:       ulam.hs
  build-depends:
    , base   >=4.21.0.0 && <4.23.0.0
    , maths  ^>=0.2.0.0

-- Primes

executable decomp
  import:  shared-properties
  main-is: primefun/decomp.hs

-- fcv, primes ^>=0.2.1.0

executable harmonic-prime-denoms
  import:        shared-properties
  main-is:       primefun/harmonic-prime-denoms.hs
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , primes  ^>=0.2.1.0

executable primemod
  import:  shared-properties
  main-is: primefun/primemod.hs

executable primeraw
  import:  shared-properties
  main-is: primefun/primeraw.hs

executable primey
  import:        shared-properties
  main-is:       primefun/primey.hs
  build-depends:
    , base    >=4.21.0.0 && <4.23.0.0
    , primes  ^>=0.2.1.0

executable raw
  import:  shared-properties
  main-is: primefun/raw.hs

executable semiprime
  import:        shared-properties
  main-is:       primefun/semiprime.hs
  build-depends:
    , base     >=4.21.0.0 && <4.23.0.0
    , maths    ^>=0.2.0.0
    , tabular  ^>=0.2.2.8

-- , primes   ^>=0.2.1.0
executable upperlower
  import:        shared-properties

  if ((arch(javascript) || arch(wasm32)) || flag(musl))
    buildable: False

  main-is:       primefun/upperlower.hs
  build-depends:
    , base   >=4.21.0.0 && <4.23.0.0
    , maths  ^>=0.2.0.0

-- executable squareplusone
--   import:        shared-properties
--   main-is:       primefun/squareplusone.hs
--   build-depends:
test-suite maths-test
  import:             shared-properties

  if (arch(javascript) || arch(wasm32))
    buildable: False

  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      UlamSpec
  build-tool-depends: hspec-discover:hspec-discover
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , base   >=4.21.0.0 && <4.23.0.0
    , hspec  ^>=2.11.9
    , maths  ^>=0.2.0.0

-- , hspec-core ^>=2.11.10
-- , hspec-expectations ^>=0.8.4
-- , QuickCheck ^>=2.17.0.0
